Jabel may be joking.